--- a/assets/Registration/signup.html
+++ b/assets/Registration/signup.html
@@ -35,7 +35,9 @@
           <div class="right-side">
             <div class="wrapper">
               <h2>Get started.</h2>
-              <p>Already have an account? <a href="#">Log in</a></p>
+              <p>
+                Already have an account ? <a href="./ Login.html">Log in</a>
+              </p>
               <div class="sign-up-buttons">
                 <button id="sign-up">
                   <img src="img/google-icon.png" /> Sign up with Google
@@ -93,11 +95,11 @@
                 </span>
               </div>
 
-              <button id="register-button" type="submit">Register</button>
+              <button id="register-button" type="submit">Sign Up</button>
               <p class="credits">
                 Made with ❤️ by
                 <a href="https://github.com/aluizamendes" target="_blank"
-                  >aluizamendes</a
+                  >Appnest</a
                 >
               </p>
             </div>
