--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 />
                 <label class="form-check-label" for="SidebarDefault"
                   ><img
-                    src="../assets/img/sidebar-default.svg"
+                    src="./assets/img/logo.jpg"
                     alt="Sidebar Default"
                     class="rounded mb-2 border-gray-400 border"
                   /><span>Default</span></label
@@ -276,7 +276,7 @@
         <div class="container-fluid px-0">
           <div class="row align-items-center">
             <div class="col">
-              <h1 class="h2 mb-0">Festive</h1>
+              <h1 class="h2 mb-0">Dashboard</h1>
             </div>
             <div class="col-auto d-flex align-items-center my-2 my-sm-0">
               <a
@@ -1188,7 +1188,7 @@
       var options = {
         series: [
           {
-            name: "2020",
+            name: "2024",
             data: [31, 40, 28, 51, 42, 75, 60, 45, 70, 30, 15, 50],
           },
           {
