--- a/index.html
+++ b/index.html
@@ -34,9 +34,15 @@
       type="text/css"
       media="all"
     />
+
+    <!-- تحميل خط كايرو من Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
-  <body class="bg-gray-100 festive-template">
+  <body class="bg-gray-100 festive-template" id="body">
     <!-- Muze Customize Sidebar -->
     <div class="customize-sidebar">
       <div class="border-bottom border-gray-200 p-3 p-md-4">
@@ -1300,5 +1306,17 @@
       );
       chart.render();
     </script>
+
+    <!--  -->
+
+    <!--  -->
+
+    <!-- مكتبة Google Translate -->
+    <script
+      type="text/javascript"
+      src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+    ></script>
+
+    <script src="./assets/Script/app.js"></script>
   </body>
 </html>
