--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
         </div>
       </div>
       <div class="row g-0">
-        <div class="col-xxl-9">
+        <div class="main_bac">
           <div class="p-3 p-xxl-5 border-end border-gray-200">
             <div class="container-fluid px-0">
               <div class="row">
