--- a/index.html
+++ b/index.html
@@ -40,9 +40,15 @@
   </head>
 
   <body class="bg-gray-100 festive-template" id="body">
+    <a href="javascript:void(0);" class="muze-hamburger d-block d-lg-none col-auto">
+      <img src="../assets/svg/icons/hamburger1.svg" alt="img">
+      <img src="../assets/svg/icons/close1.svg" style="width:20px;" class="menu-close" alt="img">
+      11
+    </a>
     <nav class="navbar navbar-vertical navbar-expand-lg navbar-light">
    
       <div class="navbar-collapse">
+        
         <ul class="navbar-nav mb-2" id="accordionExample" data-simplebar="init"><div class="simplebar-wrapper" style="margin: 0px;"><div class="simplebar-height-auto-observer-wrapper"><div class="simplebar-height-auto-observer"></div></div><div class="simplebar-mask"><div class="simplebar-offset" style="right: 0px; bottom: 0px;"><div class="simplebar-content-wrapper" style="height: 100%; overflow: hidden;"><div class="simplebar-content" style="padding: 0px;">
 
 
