--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
     />
   </head>
 
-  <body class="bg-gray-100 festive-template" id="body">
+    <body
+    class="bg-gray-100 analytics-template muze-dark-mode null default-sidebar container" id="body"
+  >
   
     <nav class="navbar navbar-vertical navbar-expand-lg navbar-light">
    
