--- a/index.html
+++ b/index.html
@@ -503,8 +503,7 @@
               <div class="row">
                 <div class="col-md-12">
                   <div
-                    class="position-relative rounded-12 mb-5 border border-gray-300 bg-gray-100 zIndex-0"
-                    role="alert"
+                  class="card rounded-24 shadow-dark-80 border border-gray-50 "                    role="alert"
                   >
                     <div class="row g-0">
                       <div class="col-lg-12 col-xl-7 col-xxl-6 p-xxl-3">
