--- a/assets/Registration/ Login.html
+++ b/assets/Registration/ Login.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="../Style/register.css" />
+
     <link
       rel="stylesheet"
       href="https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css"
@@ -26,7 +26,7 @@
             <div class="img-and-text">
               <img
                 class="cart-illustration"
-                src="img/cart-illustration.png"
+                src="../img/cart-illustration.png"
                 alt=""
               />
               <h1>Start for free and get attractive offers.</h1>
